--- a/app/templates/admin/users.jade
+++ b/app/templates/admin/users.jade
@@ -2,7 +2,7 @@ extends /templates/base
 
 block content
   
-  h1 User List
+  h1(data-i18n="admin.u_title") User List
   
   table.table.table-striped.table-bordered.table-condensed#users
     tbody
