--- a/app/templates/contribute/contribute_nav.jade
+++ b/app/templates/contribute/contribute_nav.jade
@@ -1,17 +1,38 @@
 ul.contribute_class.affix.nav.nav-list.nav-pills#contribute-nav
   li
-    h3 Character Classes
+    h3(data-i18n="contribute.character_classes_title") Character Classes
   li
-    a(href=navPrefix + "#archmage") Archmage (Coder)
+    a(href=navPrefix + "#archmage")
+      span(data-i18n="account_settings.archmage_title_pref") Archmage
+      span  
+      span(data-i18n="account_settings.archmage_title_suf") (Coder)
   li
-    a(href=navPrefix + "#artisan") Artisan (Level Builder)
+    a(href=navPrefix + "#artisan")
+      span(data-i18n="account_settings.artisan_title_pref") Artisan
+      span  
+      span(data-i18n="account_settings.artisan_title_suf") (Level Builder)
   li
-    a(href=navPrefix + "#adventurer") Adventurer (Level Playtester)
+    a(href=navPrefix + "#adventurer")
+      span(data-i18n="account_settings.adventurer_title_pref") Adventurer
+      span  
+      span(data-i18n="account_settings.adventurer_title_suf") (Level Playtester)
   li
-    a(href=navPrefix + "#scribe") Scribe (Article Editor)
+    a(href=navPrefix + "#scribe")
+      span(data-i18n="account_settings.scribe_title_pref") Scribe
+      span  
+      span(data-i18n="account_settings.scribe_title_suf") (Article Editor)
   li 
-    a(href=navPrefix + "#diplomat") Diplomat (Translator)
+    a(href=navPrefix + "#diplomat")
+      span(data-i18n="account_settings.diplomat_title_pref") Diplomat
+      span  
+      span(data-i18n="account_settings.diplomat_title_suf") (Translator)
   li
-    a(href=navPrefix + "#ambassador") Ambassador (Support)
+    a(href=navPrefix + "#ambassador")
+      span(data-i18n="account_settings.ambassador_title_pref") Ambassador
+      span  
+      span(data-i18n="account_settings.ambassador_title_suf") (Support)
   li
-    a(href=navPrefix + "#counselor") Counselor (Expert/Teacher)
+    a(href=navPrefix + "#counselor")
+      span(data-i18n="account_settings.counselor_title_pref") Counselor
+      span  
+      span(data-i18n="account_settings.counselor_title_suf") (Expert/Teacher)
