--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -1,3 +1,7 @@
-h3.edit-component-name= editTitle
+h3.edit-component-name
+  span(data-i18n="editor.level_component_edit_title")
+    | Edit Component
+  span : 
+    | "#{editTitle}"
 
 #edit-component-treema
