--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -1,3 +1,7 @@
-h3.edit-system-name= editTitle
+h3.edit-system-name
+  span(data-i18n="editor.level_system_edit_title")
+    | Edit System
+  span : 
+    | "#{editTitle}"
 
 #edit-system-treema
