--- a/app/templates/admin.jade
+++ b/app/templates/admin.jade
@@ -2,18 +2,18 @@ extends /templates/base
 
 block content
   
-  h3 Admin Views
+  h3(data-i18n="admin.av_title") Admin Views
 
-  h4 Entities
+  h4(data-i18n="admin.av_entities_sub_title") Entities
   
   ul
     li
-      a(href='/admin/users') Users
+      a(href="/admin/users", data-i18n="admin.av_entities_users_url") Users
     li
-      a(href='/admin/level_sessions') Active Instances
+      a(href="/admin/level_sessions", data-i18n="admin.av_entities_active_instances_url") Active Instances
         
-  h4 Other
+  h4(data-i18n="admin.av_other_sub_title") Other
 
   ul
     li
-      a(href='/admin/base') Base (for debugging base.jade)
+      a(href="/admin/base", data-i18n="admin.av_other_debug_base_url") Base (for debugging base.jade)
