--- a/app/templates/editor/article/edit.jade
+++ b/app/templates/editor/article/edit.jade
@@ -1,10 +1,12 @@
 extends /templates/base
 
 block content
-  button.btn.btn-primary#preview-button Preview
-  button.btn.btn-primary#save-button(data-toggle="coco-modal", data-target="modal/save_version") Save
+  button(data-i18n="article.edit_btn_preview").btn.btn-primary#preview-button Preview
+  button(data-i18n="article.edit_btn_save").btn.btn-primary#save-button(data-toggle="coco-modal", data-target="modal/save_version") Save
 
-  h3 Edit Article: "#{article.attributes.name}"
+  h3(data-i18n="article.edit_article_title") Edit Article
+    span
+     |: "#{article.attributes.name}"
   
   #article-treema
     
