--- a/app/templates/editor/article/table.jade
+++ b/app/templates/editor/article/table.jade
@@ -1,11 +1,15 @@
 table.table
   tr
-    th(colspan=3) Results: #{documents.length}
+    th(colspan=3)
+      span(data-i18n="article.index_table_results")
+        | Results
+      span
+        |: #{documents.length}
   
   tr
-    th Name
-    th Body
-    th Version
+    th(data-i18n="article.index_table_name") Name
+    th(data-i18n="article.index_table_body") Body
+    th(data-i18n="article.index_table_version") Version
   
   for article in documents
     - article = article.attributes;
