--- a/app/templates/editor/level/components_tab.jade
+++ b/app/templates/editor/level/components_tab.jade
@@ -1,9 +1,9 @@
 .components-container
-  h3 Current Components
+  h3(data-i18n="editor.level_component_tab_title") Current Components
   #components-treema
 
 .edit-component-container
   if me.isAdmin()
-    button.btn.btn-primary#create-new-component-button Create New Component
+    button(data-i18n="editor.level_component_btn_new").btn.btn-primary#create-new-component-button Create New Component
   
   #editor-level-component-edit-view
