--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -5,39 +5,40 @@ block outer_content
 
     .top-controls-area
       h2.level-title-header
-        span Level Editor: 
+        span(data-i18n="editor.level_title") Level Editor
+        span : 
         span.level-title #{level.attributes.name}
     
       .level-control-buttons
-        button.btn.btn-primary#commit-level-start-button Save
-        button.btn.btn-primary#fork-level-start-button Fork
+        button(data-i18n="editor.level_btn_save").btn.btn-primary#commit-level-start-button Save
+        button(data-i18n="editor.level_btn_fork").btn.btn-primary#fork-level-start-button Fork
         .btn-group.play-button-group
-          button#play-button.btn.btn-inverse.banner(title="⌃↩ or ⌘↩: Play preview of current level") Play!
+          button(data-i18n="editor.level_btn_play")#play-button.btn.btn-inverse.banner(title="⌃↩ or ⌘↩: Play preview of current level") Play!
           button.btn.btn-inverse.banner.dropdown-toggle(data-toggle="dropdown")
             i.icon-cog.icon-white
       
           ul.dropdown-menu
             li
-              span.dropdown-menu-header Some Options?
+              span(data-i18n="editor.level_some_options").dropdown-menu-header Some Options?
             li.divider
             li
-              a(data-delay="1000", href="#") 1 second
-              a(data-delay="3000", href="#") 3 seconds
-              a(data-delay="5000", href="#") 5 seconds
-              a(data-delay="90019001", href="#") Manual
+              a(data-delay="1000", href="#", data-i18n="editor.level_options_1_second") 1 second
+              a(data-delay="3000", href="#", data-i18n="editor.level_options_3_seconds") 3 seconds
+              a(data-delay="5000", href="#", data-i18n="editor.level_options_5_seconds") 5 seconds
+              a(data-delay="90019001", href="#", data-i18n="editor.level_options_manual") Manual
       .clearfix
     
       ul.nav.nav-tabs
         li.active
-          a(href="#editor-level-thangs-tab-view", data-toggle="tab") Thangs
+          a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
         li
-          a(href="#editor-level-scripts-tab-view", data-toggle="tab") Scripts
+          a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
         li
-          a(href="#editor-level-settings-tab-view", data-toggle="tab") Settings
+          a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
         li
-          a(href="#editor-level-components-tab-view", data-toggle="tab") Components
+          a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
         li
-          a(href="#editor-level-systems-tab-view", data-toggle="tab") Systems
+          a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
   
     div.tab-content
       div.tab-pane.active#editor-level-thangs-tab-view
