--- a/app/templates/editor/level/system/new.jade
+++ b/app/templates/editor/level/system/new.jade
@@ -6,10 +6,10 @@ block modal-header-content
 block modal-body-content
   form.form-horizontal
     .control-group
-      label.control-label(for="level-system-name") Name
+      label(data-i18n="editor.create_system_field_name").control-label(for="level-system-name") Name
       .controls
         input#level-system-name.input-large(name="name", type="text")
 
 block modal-footer-content
-  button.btn(data-dismiss="modal") Cancel
-  button.btn.btn-primary#new-level-system-submit Create
+  button(data-i18n="editor.create_system_btn_cancel").btn(data-dismiss="modal") Cancel
+  button(data-i18n="editor.create_system_btn_create").btn.btn-primary#new-level-system-submit Create
