--- a/app/templates/editor/level/systems_tab.jade
+++ b/app/templates/editor/level/systems_tab.jade
@@ -1,11 +1,11 @@
 .systems-container
-  h3 Current Systems
+  h3(data-i18n="editor.level_systems_tab_title") Current Systems
   #systems-treema
 
 .edit-system-container
   if me.isAdmin()
-    button.btn.btn-primary#create-new-system-button Create New System
+    button(data-i18n="editor.level_systems_btn_new").btn.btn-primary#create-new-system-button Create New System
   
   #editor-level-system-edit-view
 
-button.btn.btn-primary#add-system-button Add System
+button(data-i18n="editor.level_systems_btn_add").btn.btn-primary#add-system-button Add System
