--- a/app/templates/editor/level/table.jade
+++ b/app/templates/editor/level/table.jade
@@ -1,13 +1,17 @@
 table.table
   tr
-    th(colspan=3) Results: #{documents.length}
+    th(colspan=3)
+      span(data-i18n="level.index_table_results")
+        | Results
+      span
+        |: #{documents.length}
   
   tr
-    th Name
-    th Description
-    th Version
+    th(data-i18n="level.index_table_name") Name
+    th(data-i18n="level.index_table_description") Description
+    th(data-i18n="level.index_table_version") Version
   
-  for level in documents
+  for level in documents 
     - level = level.attributes;
     tr
       td
