--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -1,16 +1,16 @@
 .thangs-container.thangs-column
-  h3 Current Thangs
+  h3(data-i18n="editor.level_tab_thangs_title") Current Thangs
   #thangs-treema(title="Double click to configure a thang")
 
 .world-container.thangs-column
-  h3 World Starting Conditions
+  h3(data-i18n="editor.level_tab_thangs_conditions") World Starting Conditions
   #canvas-wrapper
     canvas(width=924, height=589)#surface
     #canvas-left-gradient.gradient
     #canvas-top-gradient.gradient
 
 .add-thangs-palette.thangs-column
-  h3 Add Thangs
+  h3(data-i18n="editor.level_tab_thangs_add") Add Thangs
   #thangs-list
     for thangType in thangTypes
       div.add-thang-palette-icon(data-thang-type=thangType.name)
