Enchangement for issue #23. Removed classes related ids from account_settings to classes category

--- a/app/templates/contribute/ambassador.jade
+++ b/app/templates/contribute/ambassador.jade
@@ -12,9 +12,9 @@ block content
           img(src="/images/pages/contribute/ambassador.png", alt="")
 
       h2
-        span(data-i18n="account_settings.ambassador_title_pref") Ambassador
+        span(data-i18n="classes.ambassador_title") Ambassador
         span  
-        span(data-i18n="account_settings.ambassador_title_suf") (Support)
+        span(data-i18n="classes.ambassador_title_description") (Support)
       p(data-i18n="contribute.ambassador_introduction")
         | This is a community we're building, and you are the connections.
         | We've got Olark chats, emails, and social networks with lots of people to talk with
