--- a/app/templates/contribute/counselor.jade
+++ b/app/templates/contribute/counselor.jade
@@ -12,9 +12,9 @@ block content
           img(src="/images/pages/contribute/counselor.png", alt="")
 
       h2
-        span(data-i18n="account_settings.counselor_title_pref") Counselor
+        span(data-i18n="classes.counselor_title") Counselor
         span  
-        span(data-i18n="account_settings.counselor_title_suf") (Expert/Teacher)
+        span(data-i18n="classes.counselor_title_description") (Expert/Teacher)
       p(data-i18n="contribute.counselor_introduction_1")
         | Do you have life experience?
         | A different perspective on things that can help us decide how to shape CodeCombat?
