--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -12,9 +12,9 @@ block content
           img(src="/images/pages/contribute/diplomat.png", alt="")
 
       h2
-        span(data-i18n="account_settings.diplomat_title_pref") Diplomat
+        span(data-i18n="classes.diplomat_title") Diplomat
         span  
-        span(data-i18n="account_settings.diplomat_title_suf") (Translator)
+        span(data-i18n="classes.diplomat_title_description") (Translator)
       p
         span(data-i18n="contribute.diplomat_introduction_pref")
           | So, if there's one thing we learned from the 
