--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -101,68 +101,68 @@ block content
 
             .control-group
               label.control-label(for="email_developer")
-                span(data-i18n="account_settings.archmage_title_pref")
+                span(data-i18n="classes.archmage_title")
                   | Archmage
                 br
-                span(data-i18n="account_settings.archmage_title_suf")
+                span(data-i18n="classes.archmage_title_description")
                   | (Coder)
               .controls
                 input#email_developer(name="email_developer", type="checkbox", checked=subs.developer)
-                span(data-i18n="account_settings.archmage_desc").help-inline Get emails about general news and announcements about CodeCombat.
+                span(data-i18n="classes.archmage_email_description").help-inline Get emails about general news and announcements about CodeCombat.
 
             .control-group
               label.control-label(for="email_level_creator")
-                span(data-i18n="account_settings.artisan_title_pref")
+                span(data-i18n="classes.artisan_title")
                   | Artisan
                 br
-                span(data-i18n="account_settings.artisan_title_suf")
+                span(data-i18n="classes.artisan_title_description")
                   | (Level Builder)
               .controls
                 input#email_level_creator(name="email_level_creator", type="checkbox", checked=subs.level_creator)
-                span(data-i18n="account_settings.artisan_desc").help-inline Get emails on level editor updates and announcements.
+                span(data-i18n="classes.artisan_email_description").help-inline Get emails on level editor updates and announcements.
 
             .control-group
               label.control-label(for="email_tester")
-                span(data-i18n="account_settings.adventurer_title_pref")
+                span(data-i18n="classes.adventurer_title")
                   | Adventurer
                 br
-                span(data-i18n="account_settings.adventurer_title_suf") 
+                span(data-i18n="classes.adventurer_title_description") 
                   | (Level Playtester)
               .controls
                 input#email_tester(name="email_tester", type="checkbox", checked=subs.tester)
-                span(data-i18n="account_settings.adventurer_desc").help-inline Get emails when there are new levels to test.
+                span(data-i18n="classes.adventurer_email_description").help-inline Get emails when there are new levels to test.
 
             .control-group
               label.control-label(for="email_article_editor")
-                span(data-i18n="account_settings.scribe_title_pref")
+                span(data-i18n="classes.scribe_title")
                   | Scribe
                 br
-                span(data-i18n="account_settings.scribe_title_suf")
+                span(data-i18n="classes.scribe_title_description")
                   | (Article Editor)
               .controls
                 input#email_article_editor(name="email_article_editor", type="checkbox", checked=subs.article_editor)
-                span(data-i18n="account_settings.scribe_desc").help-inline Get emails about article writing announcements.
+                span(data-i18n="classes.scribe_email_description").help-inline Get emails about article writing announcements.
 
             .control-group
               label.control-label(for="email_translator")
-                span(data-i18n="account_settings.diplomat_title_pref")
+                span(data-i18n="classes.diplomat_title")
                   | Diplomat
                 br
-                span(data-i18n="account_settings.diplomat_title_suf")
+                span(data-i18n="classes.diplomat_title_description")
                   | (Translator)
               .controls
                 input#email_translator(name="email_translator", type="checkbox", checked=subs.translator)
-                span(data-i18n="account_settings.diplomat_title_pref").help-inline Get emails about i18n developments and, eventually, levels to translate.
+                span(data-i18n="classes.diplomat_email_description").help-inline Get emails about i18n developments and, eventually, levels to translate.
 
             .control-group
               label.control-label(for="email_support")
-                span(data-i18n="account_settings.ambassador_title_pref")
+                span(data-i18n="classes.ambassador_title")
                   | Ambassador
                 br
-                span(data-i18n="account_settings.ambassador_title_suf")
+                span(data-i18n="classes.ambassador_title_description")
                   | (Support)
               .controls
                 input#email_support(name="email_support", type="checkbox", checked=subs.support)
-                span(data-i18n="account_settings.ambassador_desc").help-inline Get emails on support updates and multiplayer developments.
+                span(data-i18n="classes.ambassador_description").help-inline Get emails on support updates and multiplayer developments.
                   
         button.btn#toggle-all-button(data-i18n="account_settings.email_toggle") Toggle All
