--- a/app/templates/contribute/adventurer.jade
+++ b/app/templates/contribute/adventurer.jade
@@ -12,9 +12,9 @@ block content
           img(src="/images/pages/contribute/adventurer.png", alt="")
 
       h2
-        span(data-i18n="account_settings.adventurer_title_pref") Adventurer
+        span(data-i18n="classes.adventurer_title") Adventurer
         span  
-        span(data-i18n="account_settings.adventurer_title_suf") (Level Playtester)
+        span(data-i18n="classes.adventurer_title_description") (Level Playtester)
       p(data-i18n="account_settings.adventurer_introduction")
         | Let's be clear about your role: you are the tank. You're going to take heavy damage.
         | We need people to try out brand-new levels and help identify how to make things better.
