--- a/app/templates/contribute/archmage.jade
+++ b/app/templates/contribute/archmage.jade
@@ -12,9 +12,9 @@ block content
         img(src="/images/pages/contribute/archmage.png", alt="")
 
       h2
-        span(data-i18n="account_settings.archmage_title_pref") Archmage
+        span(data-i18n="classes.archmage_title") Archmage
         span  
-        span(data-i18n="account_settings.archmage_title_suf") (Coder)
+        span(data-i18n="classes.archmage_title_description") (Coder)
       p(data-i18n="contribute.archmage_introduction")
         | One of the best parts about building games is they synthesize so many different things.
         | Graphics, sound, real-time networking, social networking, and of course many of the
