--- a/app/templates/contribute/artisan.jade
+++ b/app/templates/contribute/artisan.jade
@@ -12,9 +12,9 @@ block content
           img(src="/images/pages/contribute/artisan.png", alt="")
 
       h2
-        span(data-i18n="account_settings.artisan_title_pref") Artisan
+        span(data-i18n="classes.artisan_title") Artisan
         span  
-        span(data-i18n="account_settings.artisan_title_suf") (Level Builder)
+        span(data-i18n="classes.artisan_title_description") (Level Builder)
       p
         span(data-i18n="contribute.artisan_introduction_pref")
           | We must construct additional levels!
