--- a/app/templates/contribute/contribute.jade
+++ b/app/templates/contribute/contribute.jade
@@ -55,9 +55,9 @@ block content
           img(src="/images/pages/contribute/archmage.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.archmage_title_pref") Archmage
+          span(data-i18n="classes.archmage_title") Archmage
           span  
-          span(data-i18n="account_settings.archmage_title_suf") (Coder)
+          span(data-i18n="classes.archmage_title_description") (Coder)
         p(data-i18n="contribute.archmage_introduction")
           | One of the best parts about building games is they synthesize so many different things.
           | Graphics, sound, real-time networking, social networking, and of course many of the
@@ -117,9 +117,9 @@ block content
           img(src="/images/pages/contribute/artisan.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.artisan_title_pref") Artisan
+          span(data-i18n="classes.artisan_title") Artisan
           span  
-          span(data-i18n="account_settings.artisan_title_suf") (Level Builder)
+          span(data-i18n="classes.artisan_title_description") (Level Builder)
         p
           span(data-i18n="contribute.artisan_introduction_pref")
             | We must construct additional levels!
@@ -177,9 +177,9 @@ block content
           img(src="/images/pages/contribute/adventurer.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.adventurer_title_pref") Adventurer
+          span(data-i18n="classes.adventurer_title") Adventurer
           span  
-          span(data-i18n="account_settings.adventurer_title_suf") (Level Playtester)
+          span(data-i18n="classes.adventurer_title_description") (Level Playtester)
         p(data-i18n="account_settings.adventurer_introduction")
           | Let's be clear about your role: you are the tank. You're going to take heavy damage.
           | We need people to try out brand-new levels and help identify how to make things better.
@@ -234,9 +234,9 @@ block content
           img(src="/images/pages/contribute/scribe.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.scribe_title_pref") Scribe
+          span(data-i18n="classes.scribe_title") Scribe
           span  
-          span(data-i18n="account_settings.scribe_title_suf") (Article Editor)
+          span(data-i18n="classes.scribe_title_description") (Article Editor)
         p
           span(data-i18n="account_settings.scribe_introduction_pref")
             | CodeCombat isn't just going to be a bunch of levels.
@@ -283,9 +283,9 @@ block content
           img(src="/images/pages/contribute/diplomat.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.diplomat_title_pref") Diplomat
+          span(data-i18n="classes.diplomat_title") Diplomat
           span  
-          span(data-i18n="account_settings.diplomat_title_suf") (Translator)
+          span(data-i18n="classes.diplomat_title_description") (Translator)
         p
           span(data-i18n="contribute.diplomat_introduction_pref")
             | So, if there's one thing we learned from the 
@@ -333,9 +333,9 @@ block content
           img(src="/images/pages/contribute/ambassador.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.ambassador_title_pref") Ambassador
+          span(data-i18n="classes.ambassador_title") Ambassador
           span  
-          span(data-i18n="account_settings.ambassador_title_suf") (Support)
+          span(data-i18n="classes.ambassador_title_description") (Support)
         p(data-i18n="contribute.ambassador_introduction")
           | This is a community we're building, and you are the connections.
           | We've got Olark chats, emails, and social networks with lots of people to talk with
@@ -384,9 +384,9 @@ block content
           img(src="/images/pages/contribute/counselor.png", alt="")
 
         h3.header-scrolling-fix
-          span(data-i18n="account_settings.counselor_title_pref") Counselor
+          span(data-i18n="classes.counselor_title") Counselor
           span  
-          span(data-i18n="account_settings.counselor_title_suf") (Expert/Teacher)
+          span(data-i18n="classes.counselor_title_description") (Expert/Teacher)
         p(data-i18n="contribute.counselor_introduction_1")
           | Do you have life experience?
           | A different perspective on things that can help us decide how to shape CodeCombat?
