--- a/app/templates/contribute/contribute_nav.jade
+++ b/app/templates/contribute/contribute_nav.jade
@@ -3,36 +3,36 @@ ul.contribute_class.affix.nav.nav-list.nav-pills#contribute-nav
     h3(data-i18n="contribute.character_classes_title") Character Classes
   li
     a(href=navPrefix + "#archmage")
-      span(data-i18n="account_settings.archmage_title_pref") Archmage
+      span(data-i18n="classes.archmage_title") Archmage
       span  
-      span(data-i18n="account_settings.archmage_title_suf") (Coder)
+      span(data-i18n="classes.archmage_title_description") (Coder)
   li
     a(href=navPrefix + "#artisan")
-      span(data-i18n="account_settings.artisan_title_pref") Artisan
+      span(data-i18n="classes.artisan_title") Artisan
       span  
-      span(data-i18n="account_settings.artisan_title_suf") (Level Builder)
+      span(data-i18n="classes.artisan_title_description") (Level Builder)
   li
     a(href=navPrefix + "#adventurer")
-      span(data-i18n="account_settings.adventurer_title_pref") Adventurer
+      span(data-i18n="classes.adventurer_title") Adventurer
       span  
-      span(data-i18n="account_settings.adventurer_title_suf") (Level Playtester)
+      span(data-i18n="classes.adventurer_title_description") (Level Playtester)
   li
     a(href=navPrefix + "#scribe")
-      span(data-i18n="account_settings.scribe_title_pref") Scribe
+      span(data-i18n="classes.scribe_title") Scribe
       span  
-      span(data-i18n="account_settings.scribe_title_suf") (Article Editor)
+      span(data-i18n="classes.scribe_title_description") (Article Editor)
   li 
     a(href=navPrefix + "#diplomat")
-      span(data-i18n="account_settings.diplomat_title_pref") Diplomat
+      span(data-i18n="classes.diplomat_title") Diplomat
       span  
-      span(data-i18n="account_settings.diplomat_title_suf") (Translator)
+      span(data-i18n="classes.diplomat_title_description") (Translator)
   li
     a(href=navPrefix + "#ambassador")
-      span(data-i18n="account_settings.ambassador_title_pref") Ambassador
+      span(data-i18n="classes.ambassador_title") Ambassador
       span  
-      span(data-i18n="account_settings.ambassador_title_suf") (Support)
+      span(data-i18n="classes.ambassador_title_description") (Support)
   li
     a(href=navPrefix + "#counselor")
-      span(data-i18n="account_settings.counselor_title_pref") Counselor
+      span(data-i18n="classes.counselor_title") Counselor
       span  
-      span(data-i18n="account_settings.counselor_title_suf") (Expert/Teacher)
+      span(data-i18n="classes.counselor_title_description") (Expert/Teacher)
