--- a/app/templates/contribute/scribe.jade
+++ b/app/templates/contribute/scribe.jade
@@ -12,9 +12,9 @@ block content
           img(src="/images/pages/contribute/scribe.png", alt="")
 
       h2
-        span(data-i18n="account_settings.scribe_title_pref") Scribe
+        span(data-i18n="classes.scribe_title") Scribe
         span  
-        span(data-i18n="account_settings.scribe_title_suf") (Article Editor)
+        span(data-i18n="classes.scribe_title_description") (Article Editor)
       p
         span(data-i18n="account_settings.scribe_introduction_pref")
           | CodeCombat isn't just going to be a bunch of levels.
