Added wizard color setting.

--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -33,3 +33,24 @@
     top: 3px
     left: 10px
     font-size: 12px
+    
+#wizard-settings-tab-view
+  .form-horizontal
+    float: left
+    width: 400px
+    margin-left: 50px
+  canvas
+    float: left
+    border: 2px solid black
+    margin: 20px
+    
+  .selector
+    position: relative
+    top: 10px
+    left: 10px
+    
+  h2 input
+    margin-left: 10px
+    
+  .form-horizontal .control-group
+    margin-bottom: 10px
