--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -230,3 +230,8 @@ div.fancy-select
     li
       color: #ebebeb
       padding: 8px 20px
+
+.ui-slider
+  border: 1px solid black
+.ui-slider-handle
+  border: 1px solid black !important
