Fixed a couple typos.

--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -16,7 +16,7 @@ block content
         span , 
         span(data-i18n="general.and") and
         span  
-        a(href="http://scotterickson.info/") Nick
+        a(href="http://www.nickwinter.net") Nick
         span  
         span(data-i18n="about.who_description_prefix")
           | together started CodeCombat in 2013. We also created 
