--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -13,7 +13,7 @@ block outer_content
         button(data-i18n="editor.level_btn_save").btn.btn-primary#commit-level-start-button Save
         button(data-i18n="editor.level_btn_fork").btn.btn-primary#fork-level-start-button Fork
         .btn-group.play-button-group
-          button(data-i18n="editor.level_btn_play")#play-button.btn.btn-inverse.banner(title="⌃↩ or ⌘↩: Play preview of current level") Play!
+          button(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="editor.level_btn_play")#play-button.btn.btn-inverse.banner Play!
           button.btn.btn-inverse.banner.dropdown-toggle(data-toggle="dropdown")
             i.icon-cog.icon-white
       
