--- a/app/templates/editor/article/edit.jade
+++ b/app/templates/editor/article/edit.jade
@@ -2,7 +2,7 @@ extends /templates/base
 
 block content
   button(data-i18n="article.edit_btn_preview").btn.btn-primary#preview-button Preview
-  button(data-i18n="article.edit_btn_save").btn.btn-primary#save-button(data-toggle="coco-modal", data-target="modal/save_version") Save
+  button(data-toggle="coco-modal", data-target="modal/save_version", data-i18n="article.edit_btn_save").btn.btn-primary#save-button Save
 
   h3(data-i18n="article.edit_article_title") Edit Article
     span
