Working on adding i18n tags from #23.

--- a/app/templates/contribute/adventurer.jade
+++ b/app/templates/contribute/adventurer.jade
@@ -15,7 +15,7 @@ block content
         span(data-i18n="classes.adventurer_title") Adventurer
         span  
         span(data-i18n="classes.adventurer_title_description") (Level Playtester)
-      p(data-i18n="account_settings.adventurer_introduction")
+      p(data-i18n="contribute.adventurer_introduction")
         | Let's be clear about your role: you are the tank. You're going to take heavy damage.
         | We need people to try out brand-new levels and help identify how to make things better.
         | The pain will be enormous; making good games is a long process and no one gets
@@ -24,10 +24,10 @@ block content
       
       h4(data-i18n="contribute.class_attributes") Class Attributes
       ul
-        li(data-i18n="account_settings.adventurer_attribute_1")
+        li(data-i18n="contribute.adventurer_attribute_1")
           | A thirst for learning. You want to learn how to code and we want to teach you how to code.
           | You'll probably be doing most of the teaching in this case, though.
-        li(data-i18n="account_settings.adventurer_attribute_2")
+        li(data-i18n="contribute.adventurer_attribute_2")
           | Charismatic. Be gentle but articulate about what needs improving, and offer suggestions
           | on how to improve.
     
@@ -41,13 +41,13 @@ block content
         a(href="http://discourse.codecombat.com/category/adventurer", data-i18n="contribute.adventurer_forum_url")
           | our forum
         span , 
-        a(href="https://www.facebook.com/codecombat", data-i18n="contribute.adventurer_facebook_url")
+        a(href="https://www.facebook.com/codecombat")
           | Facebook
         span , 
-        a(href="https://twitter.com/CodeCombat", data-i18n="contribute.adventurer_twitter_url")
+        a(href="https://twitter.com/CodeCombat")
           | Twitter
         span , and 
-        a(href="https://plus.google.com/115285980638641924488/posts", data-i18n="contribute.adventurer_gplus_url")
+        a(href="https://plus.google.com/115285980638641924488/posts")
           | Google+
         span , 
         span(data-i18n="contribute.adventurer_join_suf")
