--- a/app/templates/contribute/ambassador.jade
+++ b/app/templates/contribute/ambassador.jade
@@ -69,4 +69,10 @@ block content
       h4(data-i18n="contribute.changes_auto_save")
         | Changes are saved automatically when you toggle checkboxes.
 
+      //#Contributors
+      //  h3(data-i18n="contribute.helpful_ambassadors")
+      //    | Our Helpful Ambassadorsd:
+      //  ul.ambassadors
+      //    li 
+
     div.clearfix
