--- a/app/templates/contribute/archmage.jade
+++ b/app/templates/contribute/archmage.jade
@@ -42,7 +42,7 @@ block content
       p
         span(data-i18n="contribute.join_desc_1")
           | Anyone can help out! Just check out our 
-        a(title='GitHub', href="https://github.com/codecombat/codecombat", tabindex=-1, data-i18n="contribute.join_url_github")
+        a(title='GitHub', href="https://github.com/codecombat/codecombat", tabindex=-1)
           | GitHub
         span  
         span(data-i18n="contribute.join_desc_2")  
@@ -80,8 +80,8 @@ block content
         | Changes are saved automatically when you toggle checkboxes.
 
       #Contributors
-        h3(data-i18n="contribute.magical_archmages")
-          | Our Magical Archmages:
+        h3(data-i18n="contribute.powerful_archmages")
+          | Our Powerful Archmages:
         ul.archmages
           li David Golds
           li Zach Martin
