--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -69,7 +69,7 @@ block content
         | Changes are saved automatically when you toggle checkboxes.
 
       #Contributors
-        h3(data-i18n="contribute.translating_diplomates")
+        h3(data-i18n="contribute.translating_diplomats")
           | Our Translating Diplomats:
         ul.diplomats
           li Turkish - Nazım Gediz Aydındoğmuş
