--- a/app/templates/editor.jade
+++ b/app/templates/editor.jade
@@ -52,7 +52,7 @@ block content
     | It's still very broken, but we're seeking people to try it out and help us make it better,
     | so we're throwing it out there.
     | Learn more about the role of 
-    a(href="/contribute#artisan", data-i18n="editor.ep_use_artisan_url") Artisan
+    a(href="/contribute#artisan", data-i18n="editor.ep_use_artisan_url") Artisans
     span(data-i18n="editor.ep_use_desc_suf")
     |  in the 
     a(href="/contribute", data-i18n="editor.ep_use_contribute_url") contribute page
