--- a/app/templates/legal.jade
+++ b/app/templates/legal.jade
@@ -21,7 +21,7 @@ block content
     a(href="https://github.com/codecombat/codecombat/wiki/Third-party-software-and-services", data-i18n="archmage_wiki_url")
       | our Archmage wiki
     span  
-    span(data-i18n="legal.opensource_description_sufix")
+    span(data-i18n="legal.opensource_description_suffix")
       | for a list of the software that makes this game possible.
   hr
 
@@ -42,7 +42,7 @@ block content
     p(data-i18n="legal.security_description")
       | We strive to keep your personal information safe.
       | As an open source project, our site is freely open 
-      | to anyone to review and improve our security systems. 
+      | to anyone to review and improve our security systems.
     h4(data-i18n="legal.email_title")
       | Email
     p
@@ -52,7 +52,7 @@ block content
       a(href='/account/settings', data-i18n="legal.email_settings_url")
         | your email settings
       span  
-      span(data-i18n="legal.email_description_sufix")
+      span(data-i18n="legal.email_description_suffix")
         | or through links in the emails we send, 
         | you can change your preferences and easily unsubscribe at any time.
     h4(data-i18n="legal.cost_title")
@@ -66,13 +66,13 @@ block content
     h4(data-i18n="legal.recruitment_title")
       | Recruitment
     span(data-i18n="legal.recruitment_description_prefix")
-      | Here on CodeCombat, you're going to become a powerful wizard--not 
+      | Here on CodeCombat, you're going to become a powerful wizard–not 
       | just in the game, but also in real life.
     span  
     a(href="", data-i18n="legal.url_hire_programmers")
       | No one can hire programmers fast enough
     span , 
-    span(data-i18n="legal.recruitment_description_sufix")
+    span(data-i18n="legal.recruitment_description_suffix")
       | so once you've sharpened your skills and if you agree, 
       | we will demo your best coding accomplishments to the thousands of 
       | employers who are drooling for the chance to hire you. 
@@ -97,7 +97,7 @@ block content
     a(href="/cla", data-i18n="legal.cla_url")
       | CLA
     span , 
-    span(data-i18n="legal.contributor_description_sufix")
+    span(data-i18n="legal.contributor_description_suffix")
       | to which you should agree before contributing.
   
   h3(data-i18n="legal.code_title")
@@ -112,7 +112,7 @@ block content
     a(href="http://opensource.org/licenses/MIT", data-i18n="legal.mit_license_url")
       | MIT license
     span . 
-    span(data-i18n="legal.code_description_sufix")
+    span(data-i18n="legal.code_description_suffix")
       | This includes all code in Systems and Components that are 
       | made available by CodeCombat for the purpose of creating levels.
   
@@ -128,7 +128,7 @@ block content
     a(href="http://creativecommons.org/licenses/by/4.0/", data-i18n="legal.cc_license_url")
       | Creative Commons Attribution 4.0 International License
     span . 
-    span(data-i18n="legal.art_description_sufix")
+    span(data-i18n="legal.art_description_suffix")
       | Common content is anything made generally available by CodeCombat 
       | for the purpose of creating Levels. This includes:
   
