Added GitHub stars button.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -115,6 +115,9 @@ a[data-toggle="modal"]
     @include opacity(100)
     @include transition(opacity .10s linear)
 
+  .github-star-button
+    margin-left: 20px
+
 .error
   left: 8px
 
