--- a/app/templates/legal.jade
+++ b/app/templates/legal.jade
@@ -141,6 +141,12 @@ block content
       | Any and all other non-code creative works that 
       | are made available when creating Levels.
   
+  p(data-i18n="legal.art_access")
+    | Currently there is no universal, easy system for fetching these assets.
+    | In general, fetch them from the URLs as used by the site,
+    | contact us for assistance, or help us in extending the site
+    | to make these assets more easily accessible.
+  
   p(data-i18n="legal.art_paragraph_1")
     | For attribution, please name and link to codecombat.com near 
     | where the source is used or where appropriate for the medium. For example:
@@ -178,6 +184,12 @@ block content
       | content made specifically for that Level and 
       | not made generally available when creating Levels.
   
+  p(data-i18n="legal.rights_clarification")
+    | To clarify, anything that is made available in the Level Editor
+    | for the purpose of making levels is under CC, whereas the content
+    | created with the Level Editor or uploaded in the course of creation of
+    | Levels is not.
+  
   h3(data-i18n="legal.nutshell_title")
     | In a Nutshell
   
@@ -188,3 +200,8 @@ block content
     | the Levels themselves (that are created on codecombat.com) 
     | so that they may be charged for in the future, 
     | if that's what ends up happening.
+  
+  hr
+
+  p(data-i18n="legal.canonical") The English version of this document is the definitive, canonical version.
+    | If there are any discrepencies between translations, the English document takes precedence.
