--- a/app/templates/editor.jade
+++ b/app/templates/editor.jade
@@ -2,67 +2,43 @@ extends /templates/base
 
 block content
   
-  h3(data-i18n="editor.ep_intro_title")  Introducing The CodeCombat Level Editor
-  
-  p 
-    span(data-i18n="editor.ep_intro_desc_top_pref")
-    | Since we launched the prototype in June, 2013, we've been hard at work making
-    | systems for producing much, much more content.
-    | The centerpiece of these efforts is the new 
-    strong
-      span(data-i18n="editor.ep_intro_desc_top_strong_editor")
-      | Level Editor
-    span(data-i18n="editor.ep_intro_desc_top_suf")
-    | , which makes building levels and their many constituent parts a snap.
-  
-  div.images
-    div
-      img(src="/file/52602a6ba36ab808aa000007", alt="Articles").img-polaroid
-      br
-      span(data-i18n="editor.ep_img_desc_articles").label.label-info Write Articles
-    div
-      img(src="/file/526032dca36ab808aa000009", alt="Map").img-polaroid
-      br
-      span(data-i18n="editor.ep_img_desc_maps").label.label-info Construct Maps
-    div
-      img(src="/file/52603311a36ab808aa00000c", alt="Scripting").img-polaroid
-      br
-      span(data-i18n="editor.ep_img_desc_scripts").label.label-info Build Scripts
-    div
-      img(src="/file/52603434a36ab808aa00000e", alt="Units").img-polaroid
-      br
-      span(data-i18n="editor.ep_img_desc_units").label.label-info Configure Units
-
-  p(data-i18n="editor.ep_intro_desc_bottom")#after-images
-  | Eventually, you'll be able to build all manners of challenges, with custom sounds,
-  | music, artwork, units, maps, scripts, documentation, and yes, even code.
-  | It's got a long way to go, but it's just starting to get usable and we're itching to use it.
-  | Expect (and demand!) new levels at regular intervals as we continue to grow.
-
-  h3(data-i18n="editor.ep_watch_title") Watch it In Action
-  
-  div.screencast-wrapper
-    <object width="640" height="400"><param name="movie" value="//www.youtube.com/v/H5u5ga5dHm8?hl=en_US&amp;version=3&amp;hd=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/H5u5ga5dHm8?hl=en_US&amp;version=3&amp;hd=1" type="application/x-shockwave-flash" width="640" height="400" allowscriptaccess="always" allowfullscreen="true"></embed></object>
-  
-  h3(data-i18n="editor.ep_use_title") When Can I Use It?
+  h2(data-i18n="editor.title") CodeCombat Editors
   
   p
-    span(data-i18n="editor.ep_use_desc_pref")
-    | Now! We've opened it for general use, possibly against our better judgment.
-    | It's still very broken, but we're seeking people to try it out and help us make it better,
-    | so we're throwing it out there.
-    | Learn more about the role of 
-    a(href="/contribute#artisan", data-i18n="editor.ep_use_artisan_url") Artisans
-    span(data-i18n="editor.ep_use_desc_suf")
-    |  in the 
-    a(href="/contribute", data-i18n="editor.ep_use_contribute_url") contribute page
-    | .
+    | Build your own levels, campaigns, units and educational content.
+    | We provide all the tools you need!
+  
+  div.editor-column
+    h3
+      a(href='/editor/level') Level Editor
+    div.description
+      | Includes the tools for scripting, uploading audio, and constructing custom logic
+      | to create all sorts of levels. Everything we use ourselves!
+  
+  div.editor-column
+    h3
+      a(href='/editor/thang') Thang Editor
+    div.description
+      | Build units, defining their default logic, graphics and audio.
+      | Currently only supports importing Flash exported vector graphics.
+
+  div.editor-column
+    h3
+      a(href='/editor/article') Article Editor
+    div.description
+      | Write articles that give players overviews of programming concepts which can be
+      | used across a variety of levels and campaigns.
+  
+  div.clearfix
   
   hr
-  div#editor-links
-    a(href="/editor/level", data-i18n="editor.ep_url_edit_levels").btn Edit Levels
-    if me.isAdmin()
-      a(href="/editor/article", data-i18n="editor.ep_url_edit_articles").btn Edit Articles
-      
-  .modal.hide.fade#image-modal
-    .modal-body
+  
+  p
+    span
+      | Many major features in these editors are not currently enabled by default.
+      | As we improve the security of these systems, they will be made generally available.
+      | If you'd like to use these features sooner, 
+    a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact", data-i18n="editor.contact_us") email us!
+    span  You can also find us in our 
+    strong
+      a(href="http://www.hipchat.com/g3plnOKqa") HipChat room.
